--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
-express==4.21.1
-mongoose==6.0.12
-cors==7.2.1
-multer==1.4.5-lts.1
-jsonwebtoken==9.0.2
-bcryptjs==2.4.3
+express@4.21.1
+mongoose@6.0.12
+cors@7.2.1
+multer@1.4.5-lts.1
+jsonwebtoken@9.0.2
+bcryptjs@2.4.3
